[gd_scene load_steps=4 format=3 uid="uid://b1i3p0qbmgaoh"]

[ext_resource type="Script" path="res://Scripts/panel.gd" id="1_mwamr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3g2dc"]
bg_color = Color(0.187223, 0.298773, 0.286216, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0353334, 0.281848, 0.250797, 1)

[sub_resource type="Theme" id="Theme_ttm37"]
Panel/styles/panel = SubResource("StyleBoxFlat_3g2dc")

[node name="TestingClicks" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme = SubResource("Theme_ttm37")
script = ExtResource("1_mwamr")

[node name="increaseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 55.0
offset_top = 546.0
offset_right = 567.0
offset_bottom = 674.0
text = "Increase By 1"

[node name="DecreaseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 722.0
offset_top = 546.0
offset_right = 1234.0
offset_bottom = 674.0
text = "Decrease By 1"

[node name="ScoreLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 456.0
offset_top = 75.0
offset_right = 840.0
offset_bottom = 251.0
theme_override_font_sizes/font_size = 128
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberScoreLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 456.0
offset_top = 345.0
offset_right = 840.0
offset_bottom = 521.0
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 1099.0
offset_top = 32.0
offset_right = 1227.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 80
text = "X"

[connection signal="pressed" from="Panel/increaseButton" to="Panel" method="_on_increase_button_pressed"]
[connection signal="pressed" from="Panel/DecreaseButton" to="Panel" method="_on_decrease_button_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="Panel" method="_on_back_button_pressed"]
